# warlock

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  HACKING  HACKING.txt  MANIFEST.in  README  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yaml
test/: test_core.py
test/schemas/: country.json  person.json
tests/: test_core.py
tests/schemas/: country.json  person.json
warlock/: __init__.py  core.py  errors.py  exceptions.py  model.py
