[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version", "description"]
name = "warlock"
readme = "README.md"
authors = [{name = "Brian Waldon", email = "bcwaldon@gmail.com"}]
maintainers = [{name = "Stephen Finucane", email = "stephen@that.guru"}]
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["JSON schema", "JSON patch", "model validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jsonschema ~= 4.0",
    "jsonpatch ~= 1.0",
]

[project.optional-dependencies]
test = [
    "pytest ~= 6.0",
    "pytest-cov ~= 3.0",
]

[project.urls]
Homepage = "http://github.com/bcwaldon/warlock"
"Source Code" = "http://github.com/bcwaldon/warlock"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | __pycache__
)/
'''

[tool.isort]
known_third_party = ["jsonpatch","jsonschema"]
known_first_party = ["warlock"]
